# TellMe

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: project.toml
config/hosts/: claude-code.toml  codex.toml  opencode.toml
config/machines/: Erics-MacBook-Pro.local.toml  macos.example.toml  windows-dev.toml  windows.example.toml
config/policies/: lint.toml  models.toml  publish.toml  reconcile.toml
docs/analysis/: karpathy-llm-wiki-alignment-2026-04-10.md  llm-knowledge-base.md  llm-wiki-plugin.md  obsidian-llm-wiki-local.md  obsidian-wiki.md  overview.md  personal-kb-organization-patterns-2026-04-11.md  reference-capability-summary-2026-04-10.md  second-brain.md  tellme-prompt-readability-comparison-2026-04-12.md
docs/approvals/: 2026-04-10-tellme-optimization-design-approval.md  2026-04-10-tellme-orchestrator-foundation-package-approval.md
docs/challenges/: 2026-04-10-tellme-optimization-design-challenge.md  2026-04-10-tellme-optimization-design-disposition.md  2026-04-10-tellme-optimization-design-transition.md  (+3 more)
docs/designs/: 2026-04-15-operating-runbook.md  (+9 more)
hosts/: README.md
raw/: openai-harness-engineering.md
state/: manifest.json
templates/: host-result.schema.json  host-task.schema.json
tests/: conftest.py  test_cli.py  test_codex_collaboration.py  test_compile.py  test_config.py  test_graph.py  test_health.py  test_hosts.py  test_indexes.py  test_ingest.py  test_linting.py  test_publish.py  test_query.py  test_reconcile.py  test_runs.py  test_state.py  test_state_runs.py  test_state_schema.py  test_workflow.py
vault/: README.md
(+63 files in other folders)
