[project]
name = "tellme"
version = "0.1.0"
description = "Hybrid LLM-wiki orchestrator with Obsidian as the display layer."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.scripts]
tellme = "tellme.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tellme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
